--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,8 +91,12 @@ body {
     animation-fill-mode: forwards;
 }
 
+.heroText{
+    width: 50%;
+}
+
 .heroCatlog {
-    width: 100%;
+    width: 50%;
     animation: revealImg 2s ease-in-out infinite;
     animation-delay: 2s;
     animation-fill-mode: forwards;
@@ -100,7 +104,7 @@ body {
 
 .learnBtn {
     position: absolute;
-    bottom: 25%;
+    bottom: 20%;
     background-color: var(--white);
     border: none;
     color: var(--bluegray);
