--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,29 +76,40 @@ body {
     text-decoration: none;
 }
 
+
+
 .hero {
     display: flex;
-    justify-content: center;
+    justify-content: right;
     align-items: center;
     height: 500px;
+    overflow: hidden;
 }
 
 .text {
     color: var(--white);
     font-size: 40px;
-    animation: revealContent 1s ease-in-out infinite;
-    animation-delay: 2s;
+}
+
+
+
+.heroText{
+    position: absolute;
+    top: 30%;
+    width: 40%;
+    animation: revealContent 2s ease-in-out infinite;
+    animation-delay: 1s;
     animation-fill-mode: forwards;
 }
 
-.heroText{
-    width: 50%;
+.herosection{
+    overflow: none;
 }
 
 .heroCatlog {
     width: 50%;
     animation: revealImg 2s ease-in-out infinite;
-    animation-delay: 2s;
+    animation-delay:   1s;
     animation-fill-mode: forwards;
 }
 
@@ -111,13 +122,12 @@ body {
     padding: 10px 20px 10px 20px;
     border-radius: 25px;
     font-size: 18px;
-    animation: zoomOutBtn 1s ease-in-out;
+    animation: zoomOutBtn 2s ease-in-out;
     animation-fill-mode: forwards;
 }
 
-/* .herosection{
-    
-} */
+
+
 
 .owl-nav {
     display: none !important;
@@ -171,13 +181,15 @@ body {
 
 @keyframes revealContent {
     0% {
-        transform: translateY(100px);
+        transform: translateY(60px);
         overflow: hidden;
+        opacity: 0;
     }
 
     100% {
         transform: translateY(0px);
         overflow: hidden;
+        opacity: 1;
     }
 }
 
@@ -186,7 +198,7 @@ body {
 
 @keyframes revealImg {
     0% {
-        transform: scaleX(0.5) scaleY(0.8);
+        transform: scaleX(0.5) scaleY(0.5);
         opacity: 0;
         transform-origin: top right;
     }
@@ -195,6 +207,7 @@ body {
         transform: scaleX(1) scaleY(1);
         opacity: 1;
         transform-origin: top right;
+        overflow: none;
     }
 }
 
